--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 body {
     background: linear-gradient(to top left, #e23e25,#e55446);
     display: flex;
@@ -8,7 +13,7 @@ body {
     color: #fff;
     font-family: itc-american-typewriter, 'Courier New', Courier, monospace;
     letter-spacing: .1rem;
-    font-weight: 300;
+    font-weight: 500;
     font-style: normal;
     font-size: 16px;
 }
@@ -18,9 +23,22 @@ p {
     margin-bottom: 2rem;
 }
 
+p.lead {
+    font-size: 1.25em;
+    margin-bottom: 1em;
+}
+
+a {
+    color: #fff;
+}
+
+strong {
+    font-weight: 700;
+}
+
 h1 {
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: .75em;
 }
 
@@ -28,7 +46,7 @@ h2 {
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .container {
@@ -39,7 +57,7 @@ h2 {
     box-sizing: border-box;
 }
 
-header {
+.text-center {
     text-align: center;
 }
 
